@@ -1,5 +1,8 @@
 2009-07-03  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/x86_64/multiarch/strcspn-c.c: Minor cleanups.
+	* sysdeps/x86_64/multiarch/strspn-c.c: Likewise.
+
 	* sysdeps/x86_64/multiarch/strcmp.S: Make sure functions are all
 	aligned to 16 byte boundaries.
 	* sysdeps/x86_64/multiarch/strcpy.S: Likewise.
